@@ -4,6 +4,11 @@ Development Progress	:
 ---------------------------
 
 2011-06-15 (SVN):
+    * host_cmd.c (Host_Quit_f): Shorten the no-confirm quit condition:
+      (cls.state!=ca_dedicated && cls.state!=ca_disconnected) condenses
+      to cls.state==ca_connected.
+
+2011-06-15 (SVN):
     * libs/timidity/timidity.c (read_config_file): honor the return code
       from recursive read_config_file() call for the "source" directive.
       from timidity-0.2i bugfix patch found at
@@ -14,6 +19,10 @@ Development Progress	:
       the stupid name clash with index().
     * libs/timidity/timidity.c (read_config_file): close the file before
       returning in error cases.
+
+2011-06-15 (SVN):
+    * host_cmd.c (Host_Quit_f): Quit without confirmation when issuing
+      'quit' from the console, i.e. when not connected. (Steven's patch.)
 
 2011-06-13 (SVN):
     * gtk launcher: Changed so that there is now a "default" option for
